--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -48,18 +48,19 @@
       </div>
       <div class="grid-itemGlobalChat">
         <div>
-          <h1>Global chat</h1>
+          <h1>18+ chat</h1>
         </div>
       
         <div id="message-container">
           <h2 id="msg-1"></h2>
             <h2 id="msg-2"></h2>
               <h2 id="msg-3"></h2>
+                 <h2 id="msg-4"></h2>
 
 
         </div>
         <form id="send-container">
-          <input placeholder="say hello or sum shit!" type="text" id="message-input">
+          <input placeholder="talk to our finest girls!" type="text" id="message-input">
           <button type='button' onclick="fn1()"  id="send-button"> send </button>
         </form>
 
@@ -86,11 +87,23 @@
       </div>
 
       <div class="grid-itemNews">
-        <div class="grid-itemNewsRubrik">News</div>
-        <div class="grid-item1">1</div>
-        <div class="grid-item2">2</div>
-        <div class="grid-item3">3</div>
-        <div class="grid-item4">4</div>
+        <div class="grid-itemNewsRubrik">
+          <h2>What's new at NordicViking?</h2>
+        </div>
+        <div class="grid-item1">
+          <h3>Our babeRexa is here just for you!</h3>
+          <img src="../img/modell.jpg" alt="">
+        </div>
+        <div class="grid-item2">
+          <h2>
+            300$ Bonus when you deposit 20000$</h2>
+        </div>
+        <div class="grid-item3">
+          <h2>
+            Dont forget to collect your daily free spin!</h2></div>
+        <div class="grid-item4">
+          <h2> Talk to our girls in the "18 +" chat!</h2>
+         </div>
       </div>
 
       <div class="grid-item8">
