lagt till en spel sida med alla spel

--- a/views/blackJack.ejs
+++ b/views/blackJack.ejs
@@ -31,7 +31,7 @@
     </div>
 
     <div class="namn">
-        <button class="logoutButton"> <a href="/dashboard">Logout </a></button>
+        <button class="logoutButton"> <a href="/play">Logout </a></button>
 <p><%= name %> </p>
         <p id="player-el"></p>
     </div>
