--- a/views/store.ejs
+++ b/views/store.ejs
@@ -1,1 +1,4 @@
-<h1>Det här är store</h1>
+<h1>Hello, our store will launch soon!</h1>
+
+<button type="button"> <a href="/dashboard">Take me back</a> </button>
+
