--- a/views/play.ejs
+++ b/views/play.ejs
@@ -1,2 +1,193 @@
-<h1>welcome to our games!</h1>
-<li><a href="/blackJack">Play black Jack</a></li>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/gridPlay.css">
+    <script
+      src="https://kit.fontawesome.com/1c12de10b6.js"
+      crossorigin="anonymous"
+    ></script>
+    
+    <script defer src="js/bildSpel.js"></script>
+    <script defer src="js/javascript.js"></script>
+  </head>
+  <body>
+    <div class="grid-container">
+      <div class="empty"></div>
+      <div class="grid-itemRubrik">
+        <div class="Wrapp">
+          <div class="rubrik">
+            <h1>NordicViking</h1>
+            <p id="namnet">Choose one of our many games</p>
+          </div>
+           <img src="../img/VikingLogga.gif" alt="Logga"/>
+        </div>
+      </div>
+
+      <div class="pcoins"><h1><%= name %> : <%= coins %>$</h1></div>
+
+      <div class="grid-itemNav">
+        <ul class="navList">
+          <li><a href="/dashboard">Home</a></li>
+
+          <li><a href="/play">Play</a></li>
+
+          <li><a href="/about">About us</a></li>
+
+          <li><a href="/konto">Account</a></li>
+
+          <li><a href="/store">Store</a></li>
+
+          <li><a href="/users/logout">Log out</a></li>
+        </ul>
+      </div>
+      
+
+<div class="grid-itemPlay">
+
+    <h1 class="library">Our Game library:</h1>
+
+<div class="Games">
+
+    <div class="roulette">
+      <a href="/roulette"><h1>Roulette</h1></a>  
+      <img src="../img/roulett.jpg" alt="roulett">
+    </div>
+
+
+    <div class="bJ">
+        <a href="/blackJack"><h1>Black Jack</h1></a>
+
+        <img src="../img/blackjack.jpg" alt="blackjack"  >
+    </div>
+
+    <div class="rockPaper">
+    <a href="/rockPaper"> <h1>Rock paper scissor</h1></a>
+    <img src="../img/rockPaper.jpg" alt="">
+    </div>
+
+
+</div>
+
+    <h1 class="library">Our multiplayer games:</h1>
+
+    <div class="Games">
+
+        <div class="snake">
+          <a href="/snake"><h1>Snake </h1></a>  
+          <img src="../img/snake.jpg" alt="roulett">
+        </div>
+    
+    
+        <div class="tetris">
+            <a href="/tetris"><h1>tetris</h1></a>
+    
+            <img src="../img/tetris.jpg" alt="blackjack"  >
+        </div>
+    
+        <div class="shooter">
+        <a href="/shooter"> <h1>1v1 Gunfight</h1></a>
+        <img src="../img/shooter.jpg" alt="">
+        </div>
+    
+    
+    </div>
+    
+
+</div>
+
+      <div class="grid-item9">
+        <footer class="footer-distributed">
+          <div class="footer-left">
+            <h3>NordicViking</h3>
+
+            <p class="footer-links">
+              <a href="index.ejs">Hem</a>
+              ·
+              <a href="#">Regler</a>
+              ·
+              <a href="#">Om Oss</a>
+              ·
+              <a href="#">Q&A</a>
+              ·
+              <a href="#">Kontakta oss</a>
+            </p>
+
+            <p class="footer-company-name">NordicViking &copy; 2021</p>
+          </div>
+
+          <div class="footer-center">
+            <div>
+              <i class="fa fa-map-marker"></i>
+              <p><span>Crafoords väg 12</span> Stockholm, Sverige</p>
+            </div>
+
+            <div>
+              <i class="fa fa-phone"></i>
+              <p>+46733589217</p>
+            </div>
+
+            <div>
+              <i class="fa fa-envelope"></i>
+              <p>
+                <a href="mailto:support@company.com"
+                  >viktorlilienberg@gmail.com</a
+                >
+              </p>
+            </div>
+          </div>
+
+          <div class="footer-right">
+            <p class="footer-company-about">
+              <span>Om företaget</span>
+              Ett Online Casino grundat av viktor liljenberg med rättvisa och
+              ärliga odds.
+            </p>
+
+            <div class="footer-icons">
+              <a href="https://www.facebook.com"
+                ><i class="fa fa-facebookk">
+                  <img
+                    class="icon"
+                    src="img/facebookLogga.gif"
+                    alt=""
+                    width="50px" /></i
+              ></a>
+              <a href="https://www.instagram.com"
+                ><i class="fa fa-instagramk">
+                  <img
+                    class="icon"
+                    src="img/instaLogga.gif"
+                    alt=""
+                    width="50px" /></i
+              ></a>
+              <a href="https://www.linkedin.com"
+                ><i class="fa fa-linkedink">
+                  <img
+                    class="icon"
+                    src="img/linkedinLogga.gif"
+                    alt=""
+                    width="50px" /></i
+              ></a>
+              <a href="https://www.github.com"
+                ><i class="fa fa-githubk">
+                  <img
+                    class="icon"
+                    src="img/githubLogga (1).gif"
+                    alt=""
+                    width="50px" /></i
+              ></a>
+            </div>
+          </div>
+        </footer>
+      </div>
+    </div>
+    
+    <script src="js/globalChat.js"></script>
+  </body>
+</html>
