--- a/views/blackJack.ejs
+++ b/views/blackJack.ejs
@@ -32,7 +32,7 @@
 
     <div class="namn">
         <button class="logoutButton"> <a href="/play">Logout </a></button>
-<p><%= name %> </p>
+<p><%= avatar %> </p>
         <p id="player-el"></p>
     </div>
    
