--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/gridStyle.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="alert.css">
     
     <script
       src="https://kit.fontawesome.com/1c12de10b6.js"
@@ -24,13 +25,13 @@
         <div class="Wrapp">
           <div class="rubrik">
             <h1>NordicViking</h1>
-            <p id="namnet">Welcome <%= name %></p>
+            <p id="namnet">Welcome <%= avatar %></p>
           </div>
            <img src="../img/VikingLogga.gif" alt="Logga"/>
         </div>
       </div>
 
-      <div class="pcoins"><h1><%= name %> : <%= coins %>$</h1></div>
+      <div class="pcoins"><h1><%= avatar %> : <%= coins %>$</h1></div>
 
       <div class="grid-itemNav">
         <ul class="navList">
