--- a/views/play.ejs
+++ b/views/play.ejs
@@ -29,7 +29,7 @@
         </div>
       </div>
 
-      <div class="pcoins"><h1><%= name %> : <%= coins %>$</h1></div>
+      <div class="pcoins"><h1><%= avatar %> : <%= coins %>$</h1></div>
 
       <div class="grid-itemNav">
         <ul class="navList">
