--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/gridStyle.css" />
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/footer.css" />
-    
+    <link rel="stylesheet" href="alert.css">
     <script
     src="https://kit.fontawesome.com/1c12de10b6.js"
     crossorigin="anonymous"
