--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/loginform.css" />
+    <link rel="stylesheet" href="/css/alert.css">
     
     
   </head>
@@ -41,9 +42,13 @@
       <div class="grid-itemLogin">
         <form action="/users/login" method="POST">
          <div class="h1form"> <h2>Log in</h2></div>
+         <div class="alert">
+
+          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
           <%- include('partials/messages') %>
+        </div>
           <div class="form-group-togehter">
-            <label for="email">Email</label>
+            <label for="email" class="labelT">Email</label>
             <input
               type="email"
               id="email"
@@ -52,7 +57,7 @@
               placeholder="Enter Email"
             />
 
-            <label for="password">Password</label>
+            <label for="password" class="labelT">Password</label>
             <input
               type="password"
               id="password"
