--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/loginform.css">
+    <link rel="stylesheet" href="/css/alert.css">
     
     
 </head>
@@ -42,27 +43,52 @@
           
           <form action="/users/register" method="POST">
             <div class="h1form"> <h2>Sign up</h2></div>
-            
+            <div class="alert">
+              <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+             
             <%- include('partials/messages') %>
+            </div>
             <div class="form-group-togehter">
             
               
 
-                <label for="name">Name</label>
+                <label for="avatar" class="labelT">UserName</label>
                 <input
-                  type="name"
-                  id="name"
-                  name="name"
+                  type="avatar"
+                  id="avatar"
+                  name="avatar"
                   class="form-control"
                   placeholder="Enter Name"
-                  value="<%= typeof name != 'undefined' ? name : '' %>"
+                  value="<%= typeof avatar != 'undefined' ? avatar : '' %>"
                 />
 
               
              
             
             
-              <label for="email">Email</label>
+              <label for="firstName" class="labelT">First Name</label>
+              <input
+                type="firstName"
+                id="firstName"
+                name="firstName"
+                class="form-control"
+                placeholder="Enter firstname"
+                value="<%= typeof firstName != 'undefined' ? firstName : '' %>"
+              />
+
+              
+              <label for="lastName" class="labelT">Last Name</label>
+              <input
+                type="lastName"
+                id="lastName"
+                name="lastName"
+                class="form-control"
+                placeholder="Enter LastName"
+                value="<%= typeof lastName != 'undefined' ? lastName : '' %>"
+              />
+
+              
+              <label for="email" class="labelT">Email</label>
               <input
                 type="email"
                 id="email"
@@ -72,8 +98,9 @@
                 value="<%= typeof email != 'undefined' ? email : '' %>"
               />
             
+
             
-              <label for="password">Password</label>
+              <label for="password" class="labelT">Password</label>
               <input
                 type="password"
                 id="password"
@@ -84,7 +111,7 @@
               />
             
             
-              <label for="password2">Password</label>
+              <label for="password2" class="labelT">Password</label>
               <input
                 type="password"
                 id="password2"
@@ -94,7 +121,7 @@
                 value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
               />
             
-            <button type="submit" class="btn btn-primary btn-block">
+            <button type="submit" class="loginButton">
               Register
              </button>
             </div>
