--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/gridStyle.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/footer.css" />
-    <link rel="stylesheet" href="alert.css">
-    
+    <link rel="stylesheet" href="/css/gridPlay.css">
     <script
       src="https://kit.fontawesome.com/1c12de10b6.js"
       crossorigin="anonymous"
@@ -25,7 +23,6 @@
         <div class="Wrapp">
           <div class="rubrik">
             <h1>NordicViking</h1>
-            <p id="namnet">Welcome <%= avatar %></p>
           </div>
            <img src="../img/VikingLogga.gif" alt="Logga"/>
         </div>
@@ -41,76 +38,37 @@
 
           <li><a href="/about">About us</a></li>
 
-          <li><a href="/users/show">Account</a></li>
+          <li><a href="/konto">Account</a></li>
 
           <li><a href="/store">Store</a></li>
 
           <li><a href="/users/logout">Log out</a></li>
         </ul>
       </div>
-      <div class="grid-itemGlobalChat">
-        <div>
-          <h1>18+ chat</h1>
-        </div>
       
-        <div id="message-container">
-          <h2 id="msg-1"></h2>
-            <h2 id="msg-2"></h2>
-              <h2 id="msg-3"></h2>
-                 <h2 id="msg-4"></h2>
+
+<div class="grid-itemPlay">
+
+<h1>User profile:</h1>
+
+<div class="vne">
+  <h1><%= firstName + " " + lastName%></h1>
+</div>
 
 
-        </div>
-        <form id="send-container">
-          <input placeholder="talk to our finest girls!" type="text" id="message-input">
-          <button type='button' onclick="fn1()"  id="send-button"> send </button>
-        </form>
 
 
-      </div>
-      <div class="grid-itemBildspel">
-        <i class="fas fa-arrow-right" id="nextBtn"></i>
 
-        <i class="fas fa-arrow-left" id="prevBtn"></i>
 
-        <div class="carousel-slide">
-          <img src="../img/getRitch.jpg" id="lastClone" alt="get ritch" />
 
-          <img src="../img/poker.jpg" alt="poker" />
 
-          <img src="../img/roulett.jpg" alt="roulett" />
 
-          <img src="../img/blackjack.jpg" alt="blackjack" />
 
-          <img src="../img/getRitch.jpg" alt="get ritch" />
 
-          <img src="../img/poker.jpg" id="firstClone" alt="poker" />
-        </div>
-      </div>
 
-      <div class="grid-itemNews">
-        <div class="grid-itemNewsRubrik">
-          <h2>What's new at NordicViking?</h2>
-        </div>
-        <div class="grid-item1">
-          <h3>Our babeRexa is here just for you!</h3>
-          <img src="../img/modell.jpg" alt="">
-        </div>
-        <div class="grid-item2">
-          <h2>
-            300$ Bonus when you deposit 20000$</h2>
-        </div>
-        <div class="grid-item3">
-          <h2>
-            Dont forget to collect your daily free spin!</h2></div>
-        <div class="grid-item4">
-          <h2> Talk to our girls in the "18 +" chat!</h2>
-         </div>
-      </div>
 
-      <div class="grid-item8">
-        <img class="hej" src="../img/brabra.jpg" alt="">
-      </div>
+</div>
+
       <div class="grid-item9">
         <footer class="footer-distributed">
           <div class="footer-left">
