--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -63,9 +63,20 @@
         </div>
         <form id="send-container">
           <input placeholder="talk to our finest girls!" type="text" id="message-input">
-          <button type='button' onclick="fn1()"  id="send-button"> send </button>
+          <button type='button' onclick="myFunction()" id="send-button"> send </button>
         </form>
+        <script>
+          let times = 0;
+          function myFunction() {
+            if(times === 0){
+            alert("Hi before using our sexting Services have in mind that our girls demand a high salary, if you like our sexting services please spend more money to keep it a thing!");
+            times ++;
+            } else {
+              fn1()
+            }
 
+          }
+          </script>
 
       </div>
       <div class="grid-itemBildspel">
