--- a/views/play.ejs
+++ b/views/play.ejs
@@ -39,7 +39,7 @@
 
           <li><a href="/about">About us</a></li>
 
-          <li><a href="/konto">Account</a></li>
+          <li><a href="/users/show">Account</a></li>
 
           <li><a href="/store">Store</a></li>
 
