--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,16 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <link rel="stylesheet" href="./css/upcoming.css">
+    <link rel="stylesheet" href="./css/aboutUs.css">
 </head>
 <body>
 
     <div class="flex">
 
-        <h1>Hello, we will update soon!</h1>
-
+        <h1>Hello, and welcome to our about Page!</h1>
         <button type="button"> <a href="/dashboard">Take me back</a> </button>
     </div>
+<div class="par">
+
+    <p>
+        We are a public pornographic escort pizza maker casino palaze. 
+        For legal reasons are all odds unfair. We make a big bargin every
+        time you set in money. This site uses paid women that meets legal
+        requirment and all poses the age of minimum 18. You play at your 
+        own risk and the money are currently going to a Car. This text
+        might look like something from the starwars but idgaf. Enjoy this picture of some random modell to atract customers to our casino.
+
+
+    </p>
+
+    <img src="../img/modell.jpg" alt="">
+</div>
     
     
 </body>
