tetris funkar numera

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -85,17 +85,17 @@
         <i class="fas fa-arrow-left" id="prevBtn"></i>
 
         <div class="carousel-slide">
-         <a href=""><img src="../img/getRitch.jpg" id="lastClone" alt="get ritch" /></a> 
+         <img src="../img/getRitch.jpg" id="lastClone" alt="get ritch" /> 
 
-         <a href="/play"> <img src="../img/poker.jpg" alt="poker" /></a>
+          <img src="../img/poker.jpg" alt="poker" />
 
-         <a href="/play"><img src="../img/roulett.jpg" alt="roulett" /></a> 
+         <img src="../img/roulett.jpg" alt="roulett" />
 
-          <a href="/play"><img src="../img/blackjack.jpg" alt="blackjack" /></a>
+          <img src="../img/blackjack.jpg" alt="blackjack" />
           
-          <a href="/play"><img src="../img/getRitch.jpg" alt="get ritch" /></a>
+          <img src="../img/getRitch.jpg" alt="get ritch" />
 
-        <a href="/play"> <img src="../img/poker.jpg" id="firstClone" alt="poker" /></a> 
+         <img src="../img/poker.jpg" id="firstClone" alt="poker" />
         </div>
       </div>
 
