--- a/public/css/tetris.css
+++ b/public/css/tetris.css
@@ -7,54 +7,49 @@
   }
 
 body {
-    background: #000;
+    
+ background-image: url("../img/brickWall.jpg");
     color: #fff;
     font-family: sans-serif;
     font-size: 2em;
     text-align: center;
     display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    background-size: auto;
+
 }
 
-.playingField{
-    display: flex;
-    background-color: brown;
-    padding-bottom: 3em;
+.score{
+    color: black;
+    font-weight: bold;
+    font-size: 2em;
 }
+
+
+
+.Wrapp{
+    width: 100vw;
+    display: flex;
+    flex-direction:row;
+    background-color: #1f2833;
+    padding-bottom: 2em;
+}
+
+
+.rubrik{
+ margin-left: 30vw;
+ margin-top: 2em;
+ color: #ffc759;
+}
+
+
+
 
 #namnet{
     width: 15em;
 }
 
-.ost{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: brown;
-    padding-top: 0.5em;
-    color: #ffc759;
-}
-
-.ost1{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: brown;
-    padding-top: 0.5em;
-    color: black;
-    font-weight: bold;
-}
-
-.subway{
-    background-color: #1f2833;
-    text-align: center;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    
-}
-
-.subway h1{
-    color: #ffc759;
-}
 
 .player {
     flex: 1 1 auto;
@@ -62,7 +57,7 @@ body {
 
 canvas {
     border: solid .2em #707070;
-    height: 90vh;
+    height: 80vh;
 }
 
 button{
@@ -84,11 +79,6 @@ button a:hover{
     text-decoration: underline;
 }
 
-.instructions{
-    text-align: center;
-    width: 20em;
-    padding: 1em;
-}
 
 .player.local canvas {
     border-color: white;
