--- a/views/roulette.ejs
+++ b/views/roulette.ejs
@@ -7,13 +7,27 @@
     <title>Document</title>
     
     <link rel="stylesheet" href="./css/upcoming.css">
+    <link rel="stylesheet" href="./css/roulette.css">
 </head>
 <body>
-    <div class="flex">
-        </html><h1>Hello, roulett is coming soon!</h1>
-        <button type="button"> <a href="/play">Take me back</a> </button>
+
+    <div class="Wrapp">
+        <div class="rubrik">
+          <h1>NordicViking</h1>
+          
+         <img src="../img/VikingLogga.gif" alt="Logga"/>
+        </div>
+      
+      <button type="button"> <a href="/play">Take me back</a> </button>
+      
+
+       
+    </div>
+
+    <div class="rubrik">
+        </html><h2> Casino balance: <%= coins %> </h2>
     </div>
     
-    <img src="./img/roulett.jpg" alt=""></div>
+    <script src="../js/roulette.js"></script>
 </body>
 
